criação da tela principal
edição da HTML e CSS, foi feito o frame  e tela de fundo no index.html , e editei no CSS a pag-home para encaixar no frame.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Projeto Redes Sociais</title>
+    <link rel="stylesheet" href="estilos/pag-principal.css">
 </head>
 
 <body>
-    <h1>Olá mundo!</h1>
+    
+    <div class="phone">
+        <div class="frame">
+            <iframe src="pag/pag-home.html" height="100vw" width="100vw">
+
+
+            </iframe>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
