reestruturação da HTML e CSS
Reeditei o HTML e CSS da tela inicial, frame, e criei a HTML das redes sociais.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 
 <body>
     
-    <div class="phone">
-        <div class="frame">
-            <iframe src="pag/pag-home.html" height="100vw" width="100vw">
-
-
-            </iframe>
-        </div>
-    </div>
+    <main>
+        <section ">
+                <iframe id="phone" src="pag/pag-facebook.html" height="100vw" width="100vw" scrolling="yes">
+                </iframe>
+        </section>
+    </main>
 
 
 </body>
