Edição do código
com auxílio do github pages do guanabara.

--- a/pag/pag-facebook.html
+++ b/pag/pag-facebook.html
@@ -11,13 +11,9 @@
 </head>
 
 <body>
-    <main>
-
-    </main>
-
     <footer>
         <img src="../imagens/tela-facebook.jpg" alt="">
-        <a href="https://facebook.com">ACESSE</a>
+        <a href="https://www.facebook.com/gustavoguanabara/" target="_blank">ACESSE</a>
     </footer>
 </body>
 
