--- a/index.html
+++ b/index.html
@@ -13,9 +13,36 @@
 <body>
     
     <main>
-        <section ">
-                <iframe id="phone" src="pag/pag-facebook.html" height="100vw" width="100vw" scrolling="yes">
+        <section id="telefone" >
+                <iframe id="phone" name="tela" src="pag/pag-home.html" scrolling="yes">
+                    " Seu navegador não é compatível com isso. "
                 </iframe>
+        </section>
+
+        <section id="navbar"> 
+            <a href="pag/pag-home.html" target="tela">
+                <img src="imagens/logo-home.jpg" alt="Home">
+            </a>
+            <br>
+            <a href="pag/pag-youtube.html" target="tela">
+                <img src="imagens/logo-youtube.jpg" alt="Youtube">
+            </a>
+            <br>
+            <a href="pag/pag-github.html" target="tela">
+                <img src="imagens/logo-github.jpg" alt="Github">
+            </a>
+            <br>
+            <a href="pag/pag-instagram.html" target="tela">
+                <img src="imagens/logo-instagram.jpg" alt="Instagram">
+            </a>
+            <br>
+            <a href="pag/pag-twitter.html" target="tela">
+                <img src="imagens/logo-twitter.jpg" alt="Twitter">
+            </a>
+            <br>
+            <a href="pag/pag-facebook.html" target="tela">
+                <img src="imagens/logo-facebook.jpg" alt="Facebook">
+            </a>
         </section>
     </main>
 
